--- a/app/templates/prediction.html
+++ b/app/templates/prediction.html
@@ -11,10 +11,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"> 
         <title>Dog's breed classifier</title>
 
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/et-lineicon.css" />
-        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/et-lineicon.css') }}" />
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/font-awesome.min.css') }}" />
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}" />
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,400italic,500italic,700' rel='stylesheet' type='text/css'>
         <!--[if IE]>
         	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -41,8 +41,8 @@
                     <div id="countdown_dashboard" class="home-main container">
                         <div class="row">
                             <div class="logo">
-                                <img src="images/logo-dog.png" alt="logo" width="100px">
-                                <p>Dog's breed classifier</p>
+                                <img src="{{ url_for('static', filename='images/logo-dog.png') }}" alt="logo" width="100px">
+                                <h1>Dog's breed classifier</h1>
                             </div>
                         </div>
                         <div class="row">
@@ -53,7 +53,7 @@
                                     <div id="" class="confirm-message"></div>
                                     <img src="{{ url_for('preview_predicted_image', filename=filename) }}">
                                     {% autoescape false %}
-                                    <p>{{ label }}</p>
+                                    <p style="color: antiquewhite;">{{ label }}</p>
                                     {% endautoescape %}
                                     <button type="submit" class="btn btn-custom news-btn" id="" name="subscribe_btn" onclick="window.location.replace('/');">
                                         <span>Try a new image</span>
@@ -92,11 +92,11 @@
         </footer>
             
         <!-- JAVASCRIPTS -->
-        <script src="js/jquery.min.js"></script>
-        <script src="js/jquery.lwtCountdown-1.0.js"></script>
-        <script src="js/jquery.stellar.min.js"></script>
-        <script src="js/jquery.nicescroll.min.js"></script>
-        <script src="js/animated.js"></script>
-        <script src="js/main.js"></script>
+        <script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/jquery.lwtCountdown-1.0.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/jquery.stellar.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/jquery.nicescroll.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/animated.js') }}"></script>
+        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 	</body>
 </html>
